Fixed issue login and signup page icons not showing up

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -91,7 +91,7 @@ h6 {
   font-size: 12px;
 }
 
-i.fab, i.fas {
+.home-icon {
   color: rgb(255, 255, 255);
   font-size: 30px;
 }
